<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<!-- PROJECT -->
	<modelVersion>4.0.0</modelVersion>
  	<groupId>org.tedros</groupId>
  	<artifactId>tedrosbox</artifactId>
  	<version>17-0.0.1</version>
  	<packaging>pom</packaging>
  	
  	<name>tedros box</name>
  	<description>The tedros box parent projects</description>
  	
  	
	<organization>
		<name>Tedros</name>
	</organization>
  	
  	<!-- PROPERTIES -->
	<properties>
	
	
		<app.ext>17-1.0.0</app.ext>
		<!--<app.docs>17-1.0.0</app.docs>
		<app.location>17-1.0.0</app.location>-->
		<app.person>17-1.0.0</app.person>
		<app.services>17-1.0.0</app.services>
		<app.stock>17-1.0.0</app.stock>
	
		<javafx.version>17.0.11</javafx.version>
		<java.version>17</java.version>
		<maven.compiler.target>17</maven.compiler.target>
    	<maven.compiler.source>17</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<java.home>C:\Program Files\Java\jdk-17\bin</java.home>		
		<!--<java.home>D:\java\jdk\jdk-17.0.10\bin</java.home>-->
		<commons-collections.version>4.4</commons-collections.version>
		<commons.logging.version>1.3.3</commons.logging.version>
		<commons.io.version>2.16.1</commons.io.version>
		<commons.lang.version>3.14.0</commons.lang.version>
		<commons.text.version>1.12.0</commons.text.version>
		<commons.compress.version>1.26.2</commons.compress.version>
		
		<apache.poi>5.3.0</apache.poi>
		<jasper.version>7.0.0</jasper.version>
		<jackson.version>2.17.2</jackson.version>
		
		<!-- Define the version of OPEN HTML TO PDF in the properties section of your POM. -->  	       
	  	<openhtml.version>1.0.10</openhtml.version>
		
		<logback.version>1.5.4</logback.version>
		<slf4j.version>2.0.12</slf4j.version>
		<junit.version>4.13</junit.version>
		<cargo.version>1.10.14</cargo.version>
		<cargo.containerId>tomee9x</cargo.containerId>
		<h2.version>1.4.199</h2.version>
		<eclipselink.version>4.0.3</eclipselink.version>
		<jackson.jaxrs.json.provider>2.11.2</jackson.jaxrs.json.provider>
		
		<tomee.version>9.1.3</tomee.version>
		<tomee.ejb.url>http://127.0.0.1:8080/tomee/ejb</tomee.ejb.url>
		<tomee.webapp>${project.basedir}\server-application\target\catalina-base\apps</tomee.webapp>
	
		<ejb.version>3.2</ejb.version>
		<javaee.api.version>9.1.1</javaee.api.version>
		<openejb.version>9.1.3</openejb.version>
		<apache.activemq>5.16.7</apache.activemq>
		<openai.client>0.18.2</openai.client>
		
		<compiler.plugin>3.13.0</compiler.plugin>
		<source.plugin>3.0.0</source.plugin>
		<ejb.plugin>3.2.1</ejb.plugin>		
		<resource.plugin>3.3.1</resource.plugin>
		<ear.plugin>3.3.0</ear.plugin>
	
	
	</properties>
  
  	<!-- DEVELOPERS -->
	<developers>
		<developer>
			<id>davis.dun</id>
			<name>Davis Gordon Dun</name>
			<email>tedrosbox@gmail.com</email>
			<organization>Tedros</organization>
		</developer>
	</developers>
  
  	<!-- BUILD -->
  	<build>
    	<plugins>
      		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-compiler-plugin</artifactId>
        		<version>${compiler.plugin}</version>
        		<configuration>
          			<source>${java.version}</source>
          			<target>${java.version}</target>
        		</configuration>
      		</plugin>
      		<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-clean-plugin</artifactId>
			    <version>3.3.2</version> <!-- Versão mais recente e estável -->
			</plugin>
  		</plugins>
 	</build>
 	
 	<!-- MODULES -->
	<modules>
		<module>tdrs-box</module>
		<module>tdrs-fx</module>
		<module>tdrs-miscellaneous</module>
		<module>tdrs-server</module>
		<module>server-application</module>
    	<module>app-chat</module>
  </modules>
	
	<!-- REPOSITORIES -->
	<repositories>
	    <!-- Maven Central Repository (principal repositório para dependências) -->
	    <repository>
	        <id>central</id>
	        <name>Maven Central</name>
	        <url>https://repo.maven.apache.org/maven2</url>
	        <releases>
	            <enabled>true</enabled>
	        </releases>
	        <snapshots>
	            <enabled>false</enabled>
	        </snapshots>
	    </repository>
	
	    <!-- Repositório Sonatype OSS para dependências em staging -->
	    <repository>
	        <id>oss.sonatype.org</id>
	        <name>OSS Sonatype Staging</name>
	        <url>https://oss.sonatype.org/content/groups/staging</url>
	    </repository>
	
	    <!-- Repositório Apache para artefatos específicos -->
	    <repository>
	        <id>apache.releases</id>
	        <name>Apache Releases</name>
	        <url>https://repository.apache.org/content/repositories/releases</url>
	    </repository>
	
	    <!-- Repositório Tedros no GitHub Packages -->
	    <repository>
	        <id>Tedros-Box</id>
	        <name>Tedros</name>
	        <url>https://maven.pkg.github.com/tedros-box/package</url>
	    </repository>
	
	    <!-- Repositórios JasperSoft para JasperReports -->
	    <repository>
	        <id>jaspersoft-third-party</id>
	        <name>JasperSoft Third-Party CE Artifacts</name>
	        <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
	    </repository>
	    <repository>
	        <id>jr-ce-snapshots</id>
	        <name>JasperReports CE Snapshots</name>
	        <url>https://jaspersoft.jfrog.io/jaspersoft/jr-ce-snapshots</url>
	    </repository>
	    <repository>
	        <id>jr-ce-releases</id>
	        <name>JasperReports CE Releases</name>
	        <url>https://jaspersoft.jfrog.io/jaspersoft/jr-ce-releases</url>
	    </repository>
	</repositories>
  	
 	<distributionManagement>
	   <repository>
	     <id>Tedros-Box</id>
	     <name>GitHub Tedros Apache Maven Packages</name>
	     <url>https://maven.pkg.github.com/tedros-box/package</url>
		 <uniqueVersion>false</uniqueVersion>
	   </repository>
	</distributionManagement>
	
</project>